--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,17 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react-jsx", // Or "react-jsxdev" for development
     "strict": true,
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@/components/*": [
+        "./components/*"
+      ],
+      "@/styles/*": [
+        "./styles/*"
       ]
     }
   },
