--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/material-top-tabs": "^7.1.1",
+    "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "axios": "^1.8.3",
     "expo": "~52.0.37",
+    "expo-asset": "^11.0.4",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
@@ -38,9 +41,11 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.20.1",
+    "react-native-pager-view": "^6.7.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
