--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.10",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.12.3",
+    "@react-native-firebase/auth": "^21.12.3",
+    "@react-native-firebase/crashlytics": "^21.12.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/material-top-tabs": "^7.1.1",
-    "@react-navigation/native": "^7.0.15",
-    "@react-navigation/stack": "^7.1.2",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/stack": "^7.2.3",
     "axios": "^1.8.4",
     "expo": "~52.0.37",
     "expo-asset": "^11.0.4",
@@ -43,7 +48,7 @@
     "react-native-maps": "^1.20.1",
     "react-native-pager-view": "^6.7.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
