--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "module": "esnext",
     "jsx": "react-jsx", // Or "react-jsxdev" for development
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
