--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@babel/runtime": "^7.26.10",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-firebase/app": "^21.12.3",
-    "@react-native-firebase/auth": "^21.12.3",
+    "@react-native-firebase/app": "^21.14.0",
+    "@react-native-firebase/auth": "^21.14.0",
     "@react-native-firebase/crashlytics": "^21.12.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/material-top-tabs": "^7.1.1",
@@ -41,6 +41,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "firebase": "^11.6.0",
     "leaflet": "^1.9.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
