--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "module": "esnext",
-    "jsx": "react-jsx", // Or "react-jsxdev" for development
+    "target": "ES6",
+    "module": "ESNext",
+    "jsx": "react-native",
     "strict": true,
     "baseUrl": ".",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": [
         "./*"
@@ -15,7 +18,8 @@
       "@/styles/*": [
         "./styles/*"
       ]
-    }
+    },
+    "skipLibCheck": true
   },
   "include": [
     "**/*.ts",
@@ -29,5 +33,8 @@
     "metro.config.js",
     "jest.config.js"
   ],
-  "types": ["./global.d.ts"]
+  "types": [
+    "./global.d.ts"
+  ],
+  "extends": "expo/tsconfig.base"
 }
