--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/material-top-tabs": "^7.1.1",
     "@react-navigation/stack": "^7.2.3",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "^53.0.0",
     "expo-asset": "^11.0.4",
     "expo-blur": "~14.1.4",
@@ -32,6 +34,7 @@
     "expo-doctor": "^1.12.8",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.4",
     "expo-router": "~5.0.5",
@@ -54,6 +57,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg-transformer": "^1.5.1",
     "react-native-tab-view": "^4.0.5",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
