--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ],
+, "supabaseClient.js"  ],
   "exclude": [
     "node_modules",
     "babel.config.js",
