--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "jsx": "react-native",
     "strict": true,
     "baseUrl": ".",
-    "moduleResolution": "node",
+   // "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "paths": {
